crates/compiler/src/tests/e2e/bad/0003_return_type_mismatch/main.gom
fn add(a: int32, b: int32) -> string {
  a + b
}

fn main() -> unit {
  let _ = add(1, 2);
  ()
}
